--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "laravel/framework": "^10.0",
+        "nwidart/laravel-modules": "^10.0",
         "astrotomic/laravel-translatable": "^11.13",
         "binarytorch/larecipe": "^2.7",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.0",
+        "illuminate/console": "*",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^2.0",
-        "nwidart/laravel-modules": "^11.0",
         "opcodesio/log-viewer": "^3.10",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-permission": "^6.7"
